# bldr

./: Makefile  README.md  dub.json
distribution/: README.md
distribution/cratesio/: .gitignore  Cargo.toml  build.rs  prepare_release.sh
distribution/cratesio/src/: main.rs
distribution/lsp/: README.md
distribution/npm/: README.md
docs/ai/: README.md  SUMMARY.txt  USAGE_GUIDE.md  index.yaml
docs/architecture/: PLUGINS.md  dynamic-integration.md  overview.md  universal-language-abstraction.md
docs/examples/: enhanced_errors_example.d  type_safe_errors_example.d
docs/features/: ast-incremental.md  blake3.md  bldrquery.md  concurrency.md  content-addressed-sources.md  cost-optimization.md  determinism.md  distributed.md  dynamic-graph.md  dynamic-languages.md  ecosystem-integration.md  error-codes.md  graphcache.md  hermetic.md  incremental-compilation.md  incremental.md  observability.md  parsecache.md  recovery.md  remotecache.md  repository-rules.md  reproducibility-verification.md  simd.md  telemetry.md  testing.md  verification.md  watch.md
docs/security/: SECURITY.md
docs/user-guides/: CLI.md  EXAMPLES.md  LSP.md  TESTING.md  WATCH.md  WIZARD.md  hermetic.md  ignore.md  migration.md
examples/ast-incremental-example/: README.md
examples/cpp-project/: README.md
examples/cross-compile/: README.md
examples/csharp-project/: README.md
source/: app.d  builder_entry.d
tests/: fixtures.d  harness.d  mocks.d  property.d  runner.d
tools/: release.sh  run-tsan-tests.sh  stress-test.sh  test-extension-locally.sh  validate-lsp.sh
(+288 files in other folders)
