[package]
name = "builder-rs"
version = "2.0.0"
edition = "2021"
description = "High-performance build system for mixed-language monorepos"
authors = ["Griffin"]
license = "MIT"
build = "build.rs"

[[bin]]
name = "builder"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
cc = "1.0"
walkdir = "2"
which = "4.4"
