[package]
name = "bldr"
version = "2.0.2"
edition = "2021"
description = "High-performance build system for mixed-language monorepos"
authors = ["Griffin"]
license = "MIT"
repository = "https://github.com/GriffinCanCode/bldr"
homepage = "https://github.com/GriffinCanCode/bldr"
documentation = "https://github.com/GriffinCanCode/bldr#readme"
readme = "README.md"

[[bin]]
name = "bldr"
path = "src/main.rs"

[dependencies]
dirs = "5"